# ZipVoice

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-train.bat  pyproject.toml
data/: tokens_japanese.txt  tokens_japanese_extended.txt
docs/: blog_flow2gan_integration.md  flow2gan_integration.md  inference_optimization.md  japanese_finetuning_experiments.md  japanese_support.md  lora_implementation_plan.md  unity_sentis_onnx.md
egs/zipvoice/: README.md  run_japanese.sh
egs/zipvoice/local/: prepare_tokens_japanese.py  prepare_tsv_tsukuyomi.py
egs/zipvoice_dialog/: README.md
runtime/nvidia_triton/: README.md
scripts/: benchmark_inference.py  benchmark_optimization.py  convert_moe_speech_to_tsv.py  convert_paths.py  download_vocos_onnx.py  merge_lora_checkpoint.py  preprocess_moe_speech.sh  preprocess_moe_speech_plus.py  preprocess_moe_speech_plus.sh  preprocess_tsukuyomi.sh  preprocess_tsukuyomi_docker.sh  train_japanese_docker.sh
tests/: __init__.py  test_japanese_tokenizer.py  test_lora.py  test_onnx_export_sentis.py  test_scaling.py  test_verify_sentis.py
zipvoice/dataset/: datamodule.py
zipvoice/models/modules/: lora_utils.py  scaling.py  zipformer.py
zipvoice/tokenizer/: normalizer.py  tokenizer.py
zipvoice/utils/: scaling_converter.py
zipvoice/vocoder/: __init__.py  base.py  flow2gan.py  vocos.py
